<resources>
    <string name="app_name">集游</string>

    <string name="mine">扫雷</string>
    <string name="gomoku">五子棋</string>
    <string name="auto_gobang">人机对战五子棋</string>
    <string name="sudoku">数独</string>
    <string name="game_2046">2048</string>

    <string name="btn_newgame">New</string>
    <string name="btn_about">关于</string>
    <string name="btn_exit">退出</string>
    <string name="title_victor">胜利！</string>
    <string name="title_lose">失败！</string>
    <string name="text_victor">恭喜！但切记：“王者之兵,胜而不骄,败而不怨.”</string>
    <string name="text_lose">胜败乃兵家常事，望阁下再接再厉！</string>

    <string name="action_settings">Settings</string>
    <string name="press_back_again_to_exit">再次返回退出</string>
    <string name="toggle_fullscreen">长点击切换全屏</string>
</resources>
