<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.adrian.games.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_mine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mine" />

        <Button
            android:id="@+id/btn_gomoku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gomoku" />

        <Button
            android:id="@+id/btn_auto_gobang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_gobang" />

        <Button
            android:id="@+id/btn_sudoku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sudoku" />

        <Button
            android:id="@+id/btn_2046"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_2046"/>
    </LinearLayout>

</ScrollView>
